samples/transactions/ballerina-springboot-transactions/bridge/kubernetes/ballerina_bridge_sidecar_deployment.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  annotations: {}
  finalizers: []
  labels:
    app: "ballerina_bridge_sidecar"
  name: "ballerina-bridge"
  ownerReferences: []
spec:
  replicas: 1
  template:
    metadata:
      annotations: {}
      finalizers: []
      labels:
        app: "ballerina_bridge_sidecar"
      ownerReferences: []
    spec:
      containers:
      - name: bridge-sample-hotel
        image: ballerina/bridge-sample-spring-hotel-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
      - args: []
        command: []
        envFrom: []
        image: "ballerina/bridge:0.970"
        imagePullPolicy: "IfNotPresent"
        name: "ballerina-bridge"
        ports:
        - containerPort: 9090
          protocol: "TCP"
        - containerPort: 9091
          protocol: "TCP"
        volumeMounts:
        - mountPath: "/ballerina/runtime/bre/security"
          name: "securelistener-keystore-volume"
          readOnly: true
        - mountPath: "/home/ballerina/conf/"
          name: "bridgesidecar-ballerina-conf-config-map-volume"
          readOnly: false
      hostAliases: []
      imagePullSecrets: []
      initContainers: []
      nodeSelector: {}
      tolerations: []
      volumes:
      - name: "securelistener-keystore-volume"
        secret:
          items: []
          secretName: "securelistener-keystore"
      - configMap:
          items: []
          name: "bridgesidecar-ballerina-conf-config-map"
        name: "bridgesidecar-ballerina-conf-config-map-volume"
